--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
-
+    <!-- <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Dancing+Script&display=swap" rel="stylesheet">
     <title>Recipe Search App</title>
   </head>
   <body>
